force-app/main/default/objects/NewsArticleAccessLog__c/NewsArticleAccessLog__c.object-meta.xml
<CustomObject>
    <label>ニュース記事アクセスログ</label>
    <nameField>
        <label>ニュース記事アクセスログ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>