force-app/main/default/objects/NewsArticleAccessLog__c/fields/accessDate__c.field-meta.xml
<CustomField>
    <fullName>accessDate__c</fullName>
    <label>アクセス日時</label>
    <type>DateTime</type>
</CustomField>