force-app/main/default/objects/NewsArticleAccessLog__c/fields/accessUser__c.field-meta.xml
<CustomField>
    <fullName>accessUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>アクセスユーザー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>accessUser_User</relationshipName>
    <type>Lookup</type>
</CustomField>