force-app/main/default/objects/NewsArticleAccessLog__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ニュース記事</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>ニュース記事アクセスログ</relationshipLabel>
    <relationshipName>KnowledgeAccess</relationshipName>
    <type>Lookup</type>
</CustomField>